--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "core-js": "^2.6.5",
         "fastclick": "^1.0.6",
         "image-webpack-loader": "^6.0.0",
+        "js-cookie": "^2.2.1",
         "swiper": "^5.1.0",
         "vant": "^2.2.7",
         "vue": "^2.6.10",
         "vue-amap": "^0.5.10",
         "vue-awesome-swiper": "^3.1.3",
         "vue-count-to": "^1.0.13",
+        "vue-i18n": "^8.18.2",
         "vue-router": "^3.0.3",
         "vuex": "^3.0.1",
         "vuex-persistedstate": "^2.5.4",
