--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^2.6.10",
         "vue-amap": "^0.5.10",
         "vue-awesome-swiper": "^3.1.3",
+        "vue-content-loader": "^0.2.3",
         "vue-count-to": "^1.0.13",
         "vue-i18n": "^8.18.2",
         "vue-router": "^3.0.3",
